# CppCommons

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
include/: Flags.hpp  Logging.hpp  Pipe.hpp  Torus.hpp  Utils.hpp
